# Encrypted-Virtual-File-System

./: CMakeLists.txt  CryptoEngine.h  Directory.cpp  Directory.h  EncryptionStrategy.h  File.cpp  File.h  FileFactory.cpp  FileFactory.h  FileSystemEntity.cpp  FileSystemEntity.h  FileSystemException.cpp  FileSystemException.h  History Manager.h  Logger.cpp  Logger.h  PermissionManager.cpp  PermissionManager.h  Session.cpp  Session.h  StorageManager.cpp  StorageManager.h  SymLink.cpp  SymLink.h  User.cpp  User.h  VirtualShell.cpp  VirtualShell.h  main.cpp
